--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 12 12:24:11 ICT 2023
-sdk.dir=C\:\\Users\\ezlik\\AppData\\Local\\Android\\Sdk
+#Fri Oct 27 10:58:34 ICT 2023
+sdk.dir=C\:\\Users\\MeeHine\\AppData\\Local\\Android\\Sdk
