--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 }
