--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 10 22:18:55 ICT 2023
-sdk.dir=C\:\\Users\\MeeHine\\AppData\\Local\\Android\\Sdk
+#Fri Nov 10 22:46:26 ICT 2023
+sdk.dir=C\:\\Users\\ezlik\\AppData\\Local\\Android\\Sdk
